ASOS_PIPELINE.ipynb

--- a/ASOS_PIPELINE.ipynb
+++ b/ASOS_PIPELINE.ipynb
@@ -11,7 +11,7 @@
     "import os\n",
     "import subprocess\n",
     "\n",
-    "VEP_DIR = os.path.expanduser(\"/home/tigem/x.bujandac/VEP_ASO/vep_data\") # vep_data is the directory containing homo_sapiens\n",
+    "VEP_DIR = os.path.expanduser(\"/full/path/to/vep_data\") # add here your full path to vep_data (vep_data is the directory containing homo_sapiens)\n",
     "TMP_DIR = os.path.join(VEP_DIR, \"tmp\")\n",
     "os.makedirs(TMP_DIR, exist_ok=True)\n",
     "\n",
