ASOS_PIPELINE.ipynb

--- a/ASOS_PIPELINE.ipynb
+++ b/ASOS_PIPELINE.ipynb
@@ -15,10 +15,10 @@
     "TMP_DIR = os.path.join(VEP_DIR, \"tmp\")\n",
     "os.makedirs(TMP_DIR, exist_ok=True)\n",
     "\n",
-    "FASTA_FILE = \"/home/tigem/x.bujandac/VEP_ASO/GRCh38.fa\"\n",
+    "FASTA_FILE = \"/full/path/to/GRCh38.fa\"\n", # add here your full path to GRCh38.fa
     "ASSEMBLY = \"GRCh38\"\n",
-    "INPUT_VCF = \"/home/tigem/x.bujandac/VEP_ASO/VARIANTS_def.vcf\"\n",
-    "PLUGINS_DIR = \"/home/tigem/x.bujandac/VEP_ASO/Plugins\"\n",
+    "INPUT_VCF = \"/full/path/to/input.vcf\"\n", # add here your full path to input.vcf
+    "PLUGINS_DIR = \"/full/path/to/Plugins\"\n", # add here your full path to Plugins
     "REVEL_FILE = f\"{PLUGINS_DIR}/new_tabbed_revel_grch38.tsv.gz\"\n",
     "MAXENTSCAN_FILE = f\"{PLUGINS_DIR}/fordownload\"\n",
     "SPLICEAI_SNV = f\"{PLUGINS_DIR}/spliceai_scores.raw.snv.hg38.vcf.gz\"\n",
@@ -50,7 +50,7 @@
     "\n",
     "def extract_fields_with_bcftools(input_file, output_file, fields):\n",
     "    command = [\n",
-    "        \"/home/tigem/x.bujandac/anaconda3/envs/ASOS_VEP/bin/bcftools\", \"+split-vep\",\n",
+    "        \"/full/path/to/bcftools\", \"+split-vep\",\n", # add here your full path to bcftools
     "        input_file, \"-f\", fields, \"-d\",\n",
     "        \"-o\", output_file\n",
     "    ]\n",
@@ -79,7 +79,7 @@
     "\n",
     "def run_bcftools_query(input_file, output_dir, fields):\n",
     "    output_file = output_dir + \"splitted_output3.vcf\"\n",
-    "    command = [\"/home/tigem/x.bujandac/anaconda3/envs/ASOS_VEP/bin/bcftools\", \"query\",\n",
+    "    command = [\"/full/path/to/bcftools\", \"query\",\n", # add here your full path to bcftools
     "               \"-f\", fields, input_file, \"-o\", output_file]\n",
     "    subprocess.run(\" \".join(command), shell=True, check=True)\n",
     "    \n",
@@ -87,8 +87,8 @@
     "    # Runs Pangolin for annotation\n",
     "    output_file = f\"{VEP_DIR}/tmp/pangolin_output\"\n",
     "    command = [\n",
-    "        \"/home/tigem/x.bujandac/anaconda3/envs/ASOS_VEP/bin/pangolin\", INPUT_VCF,\n",
-    "        \"/home/tigem/x.bujandac/VEP_ASO/GRCh38.primary_assembly.genome.fa.gz\",\n",
+    "        \"/full/path/to/pangolin\", INPUT_VCF,\n", # add here your full path to pangolin
+    "        \"/full/path/to/GRCh38.primary_assembly.genome.fa.gz\",\n", # add here your full path to GRCh38.primary_assembly.genome.fa.gz
     "        PANGOLIN_SCRIPT, output_file\n",
     "    ]\n",
     "    subprocess.run(command, check=True)\n",
@@ -124,7 +124,7 @@
     "import math\n",
     "\n",
     "column_names=[\"chromosome\", \"Locus (hg38)\", \"Ref\", \"Alt\", \"Variant ID\", \"Gene\", \"Gene ID\", \"DOMAIN\", \"Transcript ID\", \"Mane Select\", \"Variant type\", \"Impact\", \"HGVSc\", \"HGVSp\", \"ClinVar interpretation\", \"Exon\", \"Intron\", \"REVEL\", \"MaxEntScan Alt\", \"MaxEntScan Diff\", \"MaxEntScan Ref\", \"SpliceAI AG position\", \"SpliceAI AL position\", \"SpliceAI DG position\", \"SpliceAI DL position\", \"SpliceAI AG score\", \"SpliceAI AL score\", \"SpliceAI DG score\", \"SpliceAI DL score\", \"SpliceVault site type\", \"SpliceVault top events\", \"AlphaMissense\"]\n",
-    "df = pd.read_csv('/home/tigem/x.bujandac/VEP_ASO/vep_data/tmp/splitted_output.csv',sep=' ',names=column_names)  \n",
+    "df = pd.read_csv(f\"{VEP_DIR}/tmp/splitted_output.csv",sep=' ',names=column_names)  \n",
     "\n",
     "new_column_1 = df[\"Variant type\"].str.split(\"&\", n=4, expand=True)\n",
     "df.insert(5,'Variant Type',new_column_1[0])\n",
@@ -172,10 +172,10 @@
     "df['REVEL'] = df['REVEL'].fillna(0)\n",
     "\n",
     "column_names2=[\"Transcript ID\",\"LoF\"]\n",
-    "df1 = pd.read_csv('/home/tigem/x.bujandac/VEP_ASO/vep_data/tmp/splitted_output2.csv',sep=' ', names=column_names2) \n",
+    "df1 = pd.read_csv(f\"{VEP_DIR}/tmp/splitted_output2.csv",sep=' ', names=column_names2) \n",
     "df = pd.merge(df, df1, on=\"Transcript ID\")\n",
     "column_names3=[\"Locus (hg38)\",\"Ref\",\"Alt\",\"Pangolin scores\"]\n",
-    "df2 = pd.read_csv('/home/tigem/x.bujandac/VEP_ASO/vep_data/tmp/splitted_output3.vcf',sep=' ', names=column_names3)  \n",
+    "df2 = pd.read_csv(f\"{VEP_DIR}/tmp/splitted_output3.vcf",sep=' ', names=column_names3)  \n",
     "df = pd.merge(df, df2, on=\"Locus (hg38)\")\n",
     "df = df.rename(columns={'Ref_x': 'Ref', 'Alt_x': 'Alt'})\n",
     "del df[\"Ref_y\"]\t\n",
@@ -511,9 +511,9 @@
     "    exon_df = pd.DataFrame(exon_data)\n",
     "    return exon_df\n",
     "\n",
-    "gene_transcript_df = pd.read_csv('/home/tigem/x.bujandac/VEP_ASO/vep_data/tmp/gene_transcript2.csv', sep=' ')\n",
+    "gene_transcript_df = pd.read_csv('f\"{VEP_DIR}/tmp/gene_transcript2.csv', sep=' ')\n",
     "exon_df = get_exon_coordinates_from_df(gene_transcript_df)\n",
-    "exon_df.to_csv('/home/tigem/x.bujandac/VEP_ASO/vep_data/tmp/gene_tra_exon.csv',sep=' ', index=False)"
+    "exon_df.to_csv(f\"{VEP_DIR}/tmp/gene_tra_exon.csv",sep=' ', index=False)"
    ]
   },
   {
