ASOS_PIPELINE.ipynb

--- a/ASOS_PIPELINE.ipynb
+++ b/ASOS_PIPELINE.ipynb
@@ -15,7 +15,7 @@
     "TMP_DIR = os.path.join(VEP_DIR, \"tmp\")\n",
     "os.makedirs(TMP_DIR, exist_ok=True)\n",
     "\n",
-    "FASTA_FILE = \"/full/path/to/GRCh38.fa\" # add here your full path to GRCh38.fa\n",
+    "FASTA_FILE = \"/full/path/to/GRCh38.fa\" # add here your full path to your fasta file\n",
     "ASSEMBLY = \"GRCh38\"\n",
     "INPUT_VCF = \"/full/path/to/input.vcf\" # add here your full path to input vcf file\n",
     "PLUGINS_DIR = \"/full/path/to/Plugins\" # add here your full path to Plugins directory\n",
