ASOS_PIPELINE.ipynb

--- a/ASOS_PIPELINE.ipynb
+++ b/ASOS_PIPELINE.ipynb
@@ -271,11 +271,11 @@
     "    if (df_2.loc[i, \"Damage to coding function\"] == \"NO TO LITTLE\" and \n",
     "        df_2.loc[i, \"Damage to canonical splicing\"] == \"NO TO LITTLE\" and \n",
     "        df_2.loc[i, \"Mis-splicing type\"] == \"GAIN\"):\n",
-    "        aso.append(\"PROBABLY\")  # High likelihood of ASO amenability\n",
+    "        aso.append(\"PROBABLY\")\n",
     "    elif (df_2.loc[i, \"Damage to coding function\"] == \"NO TO LITTLE\" and \n",
     "          df_2.loc[i, \"Damage to canonical splicing\"] == \"MODERATE\" and \n",
     "          df_2.loc[i, \"Mis-splicing type\"] == \"GAIN\"):\n",
-    "        aso.append(\"POSSIBLY\")  # Moderate likelihood of ASO amenability\n",
+    "        aso.append(\"POSSIBLY\")\n",
     "    elif (df_2.loc[i, \"Damage to coding function\"] == \"NO TO LITTLE\" and \n",
     "          df_2.loc[i, \"Damage to canonical splicing\"] == \"NO TO LITTLE\" and \n",
     "          df_2.loc[i, \"Mis-splicing type\"] == \"SKIPPING OR RETENTION\"):\n",
